--- a/GeneradorImagenes/pom.xml
+++ b/GeneradorImagenes/pom.xml
@@ -5,9 +5,17 @@
     <artifactId>GeneradorImagenes</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>nz.ac.waikato.cms.weka.thirdparty</groupId>
+            <artifactId>java-cup-11b-runtime</artifactId>
+            <version>2015.03.26</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
+    
 </project>
